2006-04-05  Glynn Foster <glynn.foster@sun.com>

	* Makefile.am: Move the .directory files to 
	$datadir/desktop-directories. Fixes #334405.

2006-01-30  Ed Catmur <ed@catmur.co.uk>

	Fixes #329043

	* ftstream-vfs.c: use correct function signature for FT callback.

2005-11-14  Rodrigo Moya <rodrigo@novell.com>

	* font-method.c (do_tell): fixed function signature.

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* font-method.c: (get_pango_name), (do_open):
	* ftstream-vfs.c:
	* thumbnailer.c: Mark code static and remove unused code.

2005-08-04  Paolo Borelli  <pborelli@katamail.com>

	* font-view.c (add_face_info): follow symlinks when getting
	info. Fixes part of #309744.

2005-05-12  James Henstridge  <james@jamesh.id.au>

	* font-method.c (ensure_font_list): use NULL as the var args
	terminator rather than 0.  Patch from Stanislav Brabec
	<sbrabec@suse.cz>, fixing bug #302056.

2005-02-02  Kjartan Maraas  <kmaraas@gnome.org>

	* font-method.c: (fill_file_info): Plug a leak.
	Closes bug #165312.
	* thumbnailer.c: (main): Remove unused var

2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>

	* font-method.c: (ensure_font_list): NULL vs. 0
	* ftstream-vfs.c: (vfs_stream_close): Same.

2004-12-10  James Henstridge  <james@jamesh.id.au>

	* Makefile.am (install-desktop-database): update the desktop file
	database on install, since we install a new mime action.

	* font-view.c (get_font): don't free the pattern when creating the
	font object, since XftFontOpenPattern takes ownership of the
	pattern.

	* gnome-font-viewer.desktop.in.in (Exec): use %u instead of %U,
	since we only support openning one file.

2004-11-28  James Henstridge  <james@jamesh.id.au>

	* thumbnailer.c (main): use gnome_vfs_make_uri_from_shell_arg() to
	parse the first argument.
	(main): if the glyphs for 'A' and 'a' aren't found, pick some
	other ones so we display something possibly relevant.
	(draw_char): pass in a glyph index rather than a character.
