@@ -1,5 +1,6 @@
 [Desktop Entry]
 Name=Theme Catalogue
 Comment=Theme Catalogue
-Type=Directory
 Icon=theme-capplet
+Type=Directory
+Encoding=UTF-8
