@@ -1,3 +1,8 @@
+2006-07-23  Sebastien Bacher  <seb128@debian.org>
+
+	* theme-method.directory.in: add encoding key, 
+	patch by Vincent Fretin <vincent.fretin@gmail.com> (Closes: #338593)
+
 2006-07-11  Sebastien Bacher  <seb128@debian.org>
 
 	* Makefile.am: fix distclean build target
